--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,99 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --color-accent: var(--color-apple-blue);
+  --color-theme-base: 255 255 255;
+  --color-theme-contrary: 29 29 31;
+  --color-apple-red: 255 59 48;
+  --color-apple-orange: 255 149 0;
+  --color-apple-yellow: 255 204 0;
+  --color-apple-green: 40 205 65;
+  --color-apple-mint: 0 199 190;
+  --color-apple-teal: 89 173 196;
+  --color-apple-cyan: 85 190 240;
+  --color-apple-blue: 0 122 255;
+  --color-apple-indigo: 88 86 214;
+  --color-apple-purple: 175 82 222;
+  --color-apple-pink: 255 45 85;
+  --color-apple-brown: 162 132 94;
+  --color-apple-gray: 142 142 147;
+  --color-apple-gray-2: 174 174 178;
+  --color-apple-gray-3: 199 199 204;
+  --color-apple-gray-4: 209 209 214;
+  --color-apple-gray-5: 229 229 234;
+  --color-apple-gray-6: 242 242 247;
+}
+
+.dark,
+[data-theme="dark"] {
+  --color-theme-base: 0 0 0;
+  --color-theme-contrary: 255 255 255;
+  --color-apple-red: 255 69 58;
+  --color-apple-orange: 255 159 10;
+  --color-apple-yellow: 255 214 10;
+  --color-apple-green: 50 215 75;
+  --color-apple-mint: 102 212 207;
+  --color-apple-teal: 106 196 220;
+  --color-apple-cyan: 90 200 245;
+  --color-apple-blue: 10 132 255;
+  --color-apple-indigo: 94 92 230;
+  --color-apple-purple: 191 90 242;
+  --color-apple-pink: 255 55 95;
+  --color-apple-brown: 172 142 104;
+  --color-apple-gray: 152 152 157;
+  --color-apple-gray-2: 99 99 102;
+  --color-apple-gray-3: 72 72 74;
+  --color-apple-gray-4: 58 58 60;
+  --color-apple-gray-5: 44 44 46;
+  --color-apple-gray-6: 28 28 30;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+@layer base {
+  svg {
+    @apply flex-shrink-0;
+  }
+}
+
+@layer components {
+  *::selection {
+    @apply text-apple-pink;
+  }
+
+  hr {
+    @apply border-apple-gray-6;
+  }
+
+  .text-gradient {
+    -webkit-text-fill-color: transparent;
+    @apply bg-clip-text;
+  }
+
+  .interactive {
+    @apply cursor-pointer transition-all hover:scale-110 active:scale-95;
+  }
+}
